--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,370 @@
+*{
+	box-sizing: border-box;
+}
+body, html{
+	width: 100%;
+	height: 100%;
+}
+a{
+	text-decoration: inherit;
+	color: inherit;
+}
+
 body{
-	background: green;
+	background: url(../img/background.png);
+}
+.section-title>.h1{
+	margin-left: 22px;
+}
+.section-title-first>.h1{
+	margin-left: 22px;
+}
+.h1{
+	line-height: 70px;
+	margin:0;
+	font-family: 'fira_sanslight';
+	font-size: 1.7em;
+	color: #3ba8c0;
+	}
+.strong{
+	font-family: 'fira_sansmedium';
+	font-size: 1.05em;
+	font-weight: normal;
+	margin-right: 15px;
+}
+
+
+
+.wrapper{
+	min-height: 100%;
+	overflow: hidden;
+	position: relative;
+}
+.header{
+	background: #eff3f7;
+	height: 117px;
+	position: relative;
+	margin-bottom: 40px;
+}
+.logo-and-button{
+	height: 118px;
+	display: table;
+	width: inherit;
+}
+.logo{
+	float: left;
+	margin-top: 20px;
+}
+
+.header:after{
+	position: absolute;
+	content: " ";
+	bottom: 0px;
+    background-image: -moz-linear-gradient( 0deg, rgb(28,102,122) 0%, rgb(246,250,254) 0%, rgb(216,216,216) 0%, rgb(242,246,250) 0%, rgb(135,174,186) 28%, rgb(28,102,122) 48%, rgb(135,174,186) 71%, rgb(242,246,250) 100%);
+    background-image: -webkit-linear-gradient( 0deg, rgb(28,102,122) 0%, rgb(246,250,254) 0%, rgb(216,216,216) 0%, rgb(242,246,250) 0%, rgb(135,174,186) 28%, rgb(28,102,122) 48%, rgb(135,174,186) 71%, rgb(242,246,250) 100%);
+    background-image: -ms-linear-gradient( 0deg, rgb(28,102,122) 0%, rgb(246,250,254) 0%, rgb(216,216,216) 0%, rgb(242,246,250) 0%, rgb(135,174,186) 28%, rgb(28,102,122) 48%, rgb(135,174,186) 71%, rgb(242,246,250) 100%);
+	width: 100%;
+    height: 3px;
+}
+.content{
+
+}
+.container{
+	margin: 0 auto;
+	width: 960px;
+}
+.container-wide{
+	width: 1200px;
+	height: auto;
+}
+.sidebar{
+	float: left;
+	width: 250px;
+}
+.null-ul{
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
+}
+.menu{
+	margin-bottom: 23px;
+}
+.menu-item{
+	width: 100%;
+	line-height: 73px;
+	padding-left: 28px;
+	background: #eff3f7;
+	color: #959aa8;
+	font-family: 'fira_sansbook';
+	font-size: 1.3em;
+}
+.menu-item:hover{
+	color: #3ba8c0;
+	cursor: pointer;
+}
+.menu-item-border-radius-top{
+	border-radius: 5px 5px 0 0;
+}
+.border-line{
+	/*border-top: 2px solid #3ba8c0;
+	border-bottom: 2px solid #3ba8c0;*/
+	position: relative;
+	border-image: url(../img/border.png);
+	border: 2px;
+}
+
+/*.border-line:before{
+	position: absolute;
+	content: " ";
+	top: -2px;
+	left: 10px;
+	height: 2px;
+	width: 230px;
+	background: #3ba8c0;
+
+}
+.border-line:after{
+	position: absolute;
+	content: " ";
+	bottom: -2px;
+	left: 10px;
+	height: 2px;
+	width: 230px;
+	background: #3ba8c0;
+}*/
+.menu-item-border-radius-bottom{
+	border-radius: 0 0 5px 5px;
+}
+.active-link{
+	background: #3ba8c0;
+	color: #fff;
+	font-size: 1.45em;
+}
+.active-link:hover{
+	color: #fff;
+}
+.contacts{
+	width: 100%;
+	line-height: 40px;
+	color: #fff;
+}
+.contacts-i{
+	padding-left: 82px;
+	position: relative;
+	font-family: 'fira_sanslight';
+  	font-size: 1.05em;
+}
+.contacts-i:hover{
+	text-decoration: underline;
+	cursor: pointer;
+}
+.contacts-title{
+  background-color: rgb(59, 168, 192);
+  padding-left: 21px;
+  font-family: 'fira_sansbook';
+  font-size: 1.3em;
+
+}
+.contacts-item-1 {
+  background-color: rgb(65, 185, 212);
+}
+.contacts-item-1:before{
+	content: " ";
+	position: absolute;
+	background: url(../img/mail.png);
+	width: 21px;
+	height: 16px;
+	top:10px;
+	left: 42px;
+}
+.contacts-item-2{
+  background-color: rgb(72, 203, 232);
+}
+.contacts-item-2:before{
+	content: " ";
+	position: absolute;
+	background: url(../img/phone.png);
+	width: 19px;
+	height: 21px;
+	top:10px;
+	left: 42px;
+}
+.contacts-item-3{
+  background-color: rgb(81, 218, 248);
+}
+.contacts-item-3:before{
+	content: " ";
+	position: absolute;
+	background: url(../img/skype.png);
+	width: 21px;
+	height: 21px;
+	top:10px;
+	left: 42px;
+}
+.wrap-section{
+	width: 650px;
+	float: left;
+	margin-left: 60px;
+}
+.section{
+	width: 100%;
+	background: #eff3f7;
+	padding-bottom: 31px;
+	margin-bottom: 26px;
+}
+.section-title{
+	position: relative;
+	height: 70px;
+}
+.section-title-first{
+	position: relative;
+	height: 70px;
+}
+.section-title-first:after{
+	position: absolute;
+	content: " ";
+	bottom: 0px;
+	height: 2px;
+	width: 340px;
+	background: #3ba8c0;
+}
+.section-title:after{
+	position: absolute;
+	content: " ";
+	bottom: 0px;
+	height: 2px;
+	width: 210px;
+	background: #3ba8c0;
+}
+.avatar{
+	float: left;
+	width: 210px;
+	text-align: center;
+	margin-top: 36px;
+}
+.image{
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	border: 4px solid #3ba8c0;
+}
+.information-first{
+	float: left;
+	margin-left: 20px;
+	margin-top: 25px;
+	width: 420px ;
+}
+.information-item-first{
+	padding-bottom: 16px;
+	font-family: 'fira_sansbook';
+	font-size: 0.95em;
+	line-height: 1;
+}
+.navyki{
+	font-size: 14px;
+	border-radius: 2px;
+	margin: 4px;
+	color: #fff;
+}
+.information-item{
+	position: relative;
+	margin-top: 30px;
+	margin-left: 125px;
+}
+.information-item:after{
+	content: " ";
+	position: absolute;
+	top: 0px;
+	left: -66px;
+	width: 36px;
+	height: 34px;
+	background: url(../img/work.png);
+	background-repeat: no-repeat;
+}
+.sl:after{
+	background: url(../img/shlyapa.png);
+	width: 41px;
+	height: 23px;
+	left: -70px;
+}
+.list:after{
+	background: url(../img/list.png);
+	width: 26px;
+	height: 32px;
+	left: -62px;
+}
+.danyi{
+	padding: 0;
+	margin: 0;
+	font-family: 'fira_sansbook';
+	font-size: 1.05em;
+	line-height: 17px;
+}
+.danyi-date{
+	padding: 0;
+	margin: 5px 0 0 0;
+	font-family: 'fira_sanslight';
+	font-size: 0.95em;
+	line-height: 15px;
+}
+.empty{
+	height: 60px;
+}
+.footer{
+	background: #eff3f7;
+	height: 77px;
+	margin-top: -60px;
+	position: relative;
+}
+.footer:before{
+	position: absolute;
+	content: " ";
+	top: 0px;
+    background-image: -moz-linear-gradient( 0deg, rgb(28,102,122) 0%, rgb(246,250,254) 0%, rgb(216,216,216) 0%, rgb(242,246,250) 0%, rgb(135,174,186) 28%, rgb(28,102,122) 48%, rgb(135,174,186) 71%, rgb(242,246,250) 100%);
+    background-image: -webkit-linear-gradient( 0deg, rgb(28,102,122) 0%, rgb(246,250,254) 0%, rgb(216,216,216) 0%, rgb(242,246,250) 0%, rgb(135,174,186) 28%, rgb(28,102,122) 48%, rgb(135,174,186) 71%, rgb(242,246,250) 100%);
+    background-image: -ms-linear-gradient( 0deg, rgb(28,102,122) 0%, rgb(246,250,254) 0%, rgb(216,216,216) 0%, rgb(242,246,250) 0%, rgb(135,174,186) 28%, rgb(28,102,122) 48%, rgb(135,174,186) 71%, rgb(242,246,250) 100%);
+	width: 100%;
+    height: 3px;
+}
+.vertical{
+	text-align: center;
+	vertical-align: middle;
+	line-height: 77px;
+	position: relative;
+}
+.navyki{
+	background: #3ba8c0; /* Old browsers */
+	background: -moz-linear-gradient(top,  #3ba8c0 50%, #2e8ca2 50%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  #3ba8c0 50%,#2e8ca2 50%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  #3ba8c0 50%,#2e8ca2 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3ba8c0', endColorstr='#2e8ca2',GradientType=0 ); /* IE6-9 */
+	padding: 4px 14px;
+	float: left;
+}
+.title-navyki{
+	float: left;
+}
+.wrap-navyki{
+	float: left;
+	width: 250px;
+}
+
+/*---------------Clearfix-------------------*/
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/*
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+
+.clearfix {
+    *zoom: 1;
 }
