--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,6 @@
+header, nav, section, article, aside, footer {
+   display:block;
+}
 *{
 	box-sizing: border-box;
 }
@@ -9,7 +12,6 @@ a{
 	text-decoration: inherit;
 	color: inherit;
 }
-
 body{
 	background: url(../img/background.png);
 }
@@ -20,20 +22,20 @@ body{
 	margin-left: 22px;
 }
 .h1{
-	line-height: 70px;
 	margin:0;
 	font-family: 'fira_sanslight';
 	font-size: 1.7em;
-	color: #3ba8c0;
 	}
+.first-title{
+	line-height: 70px;
+	color: #3ba8c0;
+}
 .strong{
 	font-family: 'fira_sansmedium';
 	font-size: 1.05em;
 	font-weight: normal;
 	margin-right: 15px;
 }
-
-
 
 .wrapper{
 	min-height: 100%;
@@ -107,13 +109,15 @@ body{
 }
 .border-line{
 	/*border-top: 2px solid #3ba8c0;
-	border-bottom: 2px solid #3ba8c0;*/
-	position: relative;
+	border-bottom: 2px solid #3ba8c0;
+	border-radius: 30px;
+	*/
+/*	position: relative;
 	border-image: url(../img/border.png);
-	border: 2px;
+	border: 2px 0;*/
 }
 
-/*.border-line:before{
+.border-line:before{
 	position: absolute;
 	content: " ";
 	top: -2px;
@@ -131,7 +135,7 @@ body{
 	height: 2px;
 	width: 230px;
 	background: #3ba8c0;
-}*/
+}
 .menu-item-border-radius-bottom{
 	border-radius: 0 0 5px 5px;
 }
@@ -211,6 +215,7 @@ body{
 	background: #eff3f7;
 	padding-bottom: 31px;
 	margin-bottom: 26px;
+	border-radius: 5px;
 }
 .section-title{
 	position: relative;
@@ -315,6 +320,8 @@ body{
 	height: 77px;
 	margin-top: -60px;
 	position: relative;
+	font-family: 'fira_sanslight';
+	font-size: 0.8em;
 }
 .footer:before{
 	position: absolute;
