--- a/app/css/main.css
+++ b/app/css/main.css
@@ -32,13 +32,19 @@ body{
 	font-size: 1.05em;
 	font-weight: normal;
 	margin-right: 15px;
+	float: left;
+}
+.about{
+	float: left;
+	max-width: 215px;
 }
 
 .wrapper{
 	min-height: 100%;
+	min-width: 1191px;
 	overflow: hidden;
 	position: relative;
-	min-width: 1300px;
+	/*min-width: 1300px;*/
 }
 .header{
 	background: #eff3f7;
@@ -49,7 +55,7 @@ body{
 .logo-and-button{
 	height: 118px;
 	display: table;
-	width: inherit;
+	width: 100%;
 }
 .logo{
 	float: left;
@@ -87,15 +93,15 @@ body{
 }
 .container{
 	margin: 0 auto;
-	width: 960px;
+	width: 71.15818448023426%;
 }
 .container-wide{
-	width: 1200px;
+	width: 89.847731%;
 	height: auto;
 }
 .sidebar{
 	float: left;
-	width: 250px;
+	width: 26.04166666666667%;
 }
 .null-ul{
 	padding: 0;
@@ -139,7 +145,7 @@ body{
 	top: -2px;
 	left: 10px;
 	height: 2px;
-	width: 230px;
+	width: 88.66615265998458%;
 	background: #3ba8c0;
 
 }
@@ -149,7 +155,7 @@ body{
 	bottom: -2px;
 	left: 10px;
 	height: 2px;
-	width: 230px;
+	width: 88.66615265998458%;
 	background: #3ba8c0;
 }
 .menu-item-border-radius-bottom{
@@ -223,9 +229,8 @@ body{
 	left: 42px;
 }
 .wrap-section{
-	width: 650px;
-	float: left;
-	margin-left: 60px;
+	width: 67.7111299999999%;
+	float: right;
 }
 .section{
 	width: 100%;
@@ -260,14 +265,14 @@ body{
 }
 .avatar{
 	float: left;
-	width: 210px;
+	width: 32.29202163432%;
 	text-align: center;
 	margin-top: 36px;
 	padding-left: 52px;
 }
 .image{
-	width: 150px;
-	height: 150px;
+	max-width: 100%;
+	height: auto;
 	border-radius: 50%;
 	border: 4px solid #3ba8c0;
 	overflow: hidden;
@@ -276,7 +281,7 @@ body{
 	float: left;
 	margin-left: 20px;
 	margin-top: 25px;
-	width: 420px ;
+	width: 62.26982404326863% ;
 }
 .information-item-first{
 	padding-bottom: 16px;
@@ -335,10 +340,10 @@ body{
 	height: 60px;
 }
 .footer{
-	min-width: 1300px;
+	min-width: 1191px;
 	background: #eff3f7;
 	height: 77px;
-	margin-top: -60px;
+	margin-top: -77px;
 	position: relative;
 	font-family: 'fira_sanslight';
 	font-size: 0.8em;
@@ -373,7 +378,7 @@ body{
 }
 .wrap-navyki{
 	float: left;
-	width: 250px;
+	width: 57.52381%;
 }
 /*----------------Замок-------------------*/
 .in {
