--- a/app/css/form.css
+++ b/app/css/form.css
@@ -37,6 +37,7 @@
 	color: #959aa8;
 }
 .forma-input{
+	position:relative;
 	display: block;
 	border-radius: 4px;
     border: 1px solid #48cbe8;
@@ -54,8 +55,10 @@
 }
 .forma-name-email{
 	float: left;
+	position:relative;
 }
 .forma-messege{
+	position:relative;
 	float: left;
 	margin-top: 11px;
 	color: #48cbe8;
@@ -70,6 +73,7 @@
 .forma-captcha{
 	float: left;
 	margin-bottom: 21px;
+	min-width:402px;
 }
 .captcha{
 	float: left;
@@ -82,11 +86,9 @@
 	font-size: 1.05em;
 }
 .captcha-text{
-	float: left;
 	width: 192px;
 	height: 32px;
-	margin-left: 19px;
-	margin-top: 20px;
+	margin-top: 23px;
 }
 .button-group{
 	float: left;
@@ -155,3 +157,53 @@
  box-shadow:0px 0px 2px #bababa, inset 0px 3px 1px #687b8f;  
   outline: none;
  }
+ .wrap-captcha{
+ 	position:relative;
+ 	float:right;
+ }
+ /*TOOLTIPS*/
+ .empty-input {
+    background-color: #fad2d1;
+    border: 1px solid #f97e76;
+}
+ .tooltip{
+ 	line-height:1;
+ 	display:none;
+ 	position:absolute;
+ 	white-space:nowrap;
+ 	border-radius: 4px;
+ 	padding: 7px 15px;
+ 	font-family: 'fira_sansbook';
+ 	background-color:red;
+ 	font-size: 0.8em;
+ 	color: white;
+    background-color: #f97e76;
+ }
+.left-tooltip-arrow:after {
+	left: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(136, 183, 213, 0);
+	border-left-color: #f97e76;
+	border-width: 7px;
+	margin-top: -7px;
+}
+.right-tooltip-arrow:after {
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(136, 183, 213, 0);
+	border-right-color: #f97e76;
+	border-width: 7px;
+	margin-top: -7px;
+}
