--- a/app/css/main.css
+++ b/app/css/main.css
@@ -36,7 +36,7 @@ body{
 }
 .about{
 	float: left;
-	max-width: 215px;
+	min-width: 215px;
 }
 
 .wrapper{
@@ -71,7 +71,8 @@ body{
 }
 .social-button{
     float: right;
-    margin-top: 30px;
+    margin-top: 32px;
+    margin-right: 5px;
 }
 .social-first{
     margin-left: 0px;
@@ -92,16 +93,19 @@ body{
 	
 }
 .container{
+	min-width:960px;
 	margin: 0 auto;
 	width: 71.15818448023426%;
 }
 .container-wide{
+	min-width:1200px;
 	width: 89.847731%;
 	height: auto;
 }
 .sidebar{
 	float: left;
 	width: 26.04166666666667%;
+	min-width:250px;
 }
 .null-ul{
 	padding: 0;
@@ -164,7 +168,6 @@ body{
 .active-link{
 	background: #3ba8c0;
 	color: #fff;
-	font-size: 1.45em;
 	border: 2px solid #3ba8c0;
 }
 .active-link:hover{
@@ -233,6 +236,7 @@ body{
 	float: right;
 }
 .section{
+	min-width:650px;
 	width: 100%;
 	background: #eff3f7;
 	padding-bottom: 40px;
@@ -271,8 +275,8 @@ body{
 	padding-left: 52px;
 }
 .image{
-	max-width: 100%;
-	height: auto;
+	width: 150px;
+    height: 150px;
 	border-radius: 50%;
 	border: 4px solid #3ba8c0;
 	overflow: hidden;
