--- a/app/css/myvork.css
+++ b/app/css/myvork.css
@@ -1,5 +1,5 @@
 .wrap-myvork-list{
-    padding: 27px 20px 240px 20px;
+    padding: 26px 12px 20px 14px;
     text-align: justify;
 }
 .projects-item {
@@ -64,8 +64,115 @@
 }
 .podpis-2{
     text-align: center;
-    margin-bottom: 33px;
+    margin-bottom: 22px;
     font-family: 'fira_sanslight';
     font-size: 0.95em;
     color: #4a545d;
 }
+
+.hidden{
+    visibility: hidden;
+
+}
+
+/*-----------POPUP- MYVORK---------*/
+
+
+
+#element_to_pop_up { 
+    display:none; 
+    background: #eff3f7;
+    border-radius:5px;
+    color:#000;
+    width:362px;
+    height: 495px;
+    -webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.5);
+}
+.b-close{
+    cursor:pointer;
+    position:absolute;
+    right:10px;
+    top:10px;
+    text-indent: -9999px;
+    background: url(../img/popup-close.png);
+    width: 25px;
+    height: 25px;
+
+}
+.popup-title{
+    min-height: 53px;
+    background: #48cbe8;
+    position: relative;
+    border-radius: 5px;
+}
+.popup-title:after{
+    content: " ";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 9px;
+    background: #67dffa;
+}
+.forma-text-popup{
+    display:block;
+    font-family: 'fira_sansbook';
+    font-size: 1.05em;
+    color: #959aa8;
+}
+.popup-input{
+    width: 100%;
+    height: 41px;
+}
+.wrap-popup-forma{
+    padding: 9px 21px 15px 21px;
+}
+.popup-messege{
+    padding-top: 12px;
+    resize: none;
+    width: 100%;
+    height: 110px;
+}
+.forma-popup{
+    position:relative;
+    margin-bottom: 7px;
+}
+.forma-popup-last{
+    margin-bottom:16px;
+}
+.popup-title-text{
+    font-family: fira_sansregular;
+    font-size: 1.563em;
+    color: #fff;
+    font-weight: normal;
+    padding-left: 15px;
+    line-height: 53px;
+}
+.button-popup{
+    display:block;
+    margin:0 auto;
+}
+/*input-file*/
+#chose-file-input{
+    position:absolute;
+    height:41px;
+    width:320px;
+    opacity:0;
+}
+.input-file{
+    background: url(../img/popup-add-file.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: #fff;
+    cursor:pointer;
+}
+.file{}
+.popup-input-span{
+    display: block;
+    height: 41px;
+    line-height: 41px;
+}
+/*input-file end*/
+
+/*-----------POPUP-MYVORK-END----------*/
